--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,9 @@
     <string name="menu_trends">Trends</string>
     <string name="menu_settings">Settings</string>
 
+    <string name="item_add">Add</string>
+    <string name="item_cancel">Cancel</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
