Change navigation drawer architecture
1. Add support for enhanced recycler view
2. Reconfigure navgation drawer initialization for setting tags
3. Add rate dialog view for recipe ratings, with touch event for ratingbar
4. Fix updating items to fragment will not trigger a refresh of the fragment
5. Add entry functions for ShoppinglistViewModel
6. Disable navigation map for navigation drawer
7. Beautify recipe detail fragment
8. Update navigation drawer layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,9 @@
     <string name="menu_settings">Settings</string>
 
     <string name="item_add">Add</string>
-    <string name="item_cancel">Cancel</string>
+
+    <string name="universal_cancel">Cancel</string>
+    <string name="universal_submit">Submit</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
