Update navigation drawer and imported shopping list swiping features
1. Add library for recycleview swipe feature
2. Modify recipe detail info for handling rating value
3. Modify headerview for navigation drawer
4. Create class for handling and building API Urls (Remove after server implementation)
5. Add touchhelper for swipe actions, with swipecontroller
6. Update icons for navigation drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
 
     <string name="universal_cancel">Cancel</string>
     <string name="universal_submit">Submit</string>
+    
+    <string name="payload_physicist">https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cillian-murphy-attends-the-free-fire-closing-night-gala-news-photo-615030208-1551909348.jpg</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
