Update to stable version
1. Support account feature, login and register
2. Connect shopping list based on accounts
3. Switch recipe API to project server, remove API details from application
4. Refine shopping list and user objects to align with results from server
5. Add image for cuisine type
6. Replace user icon
7. Add Volley library for connection with server
8. Add swipe feature for shopping list
9. Hide rating bar and rating number while no rating

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,6 +25,9 @@
     
     <string name="payload_physicist">https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/cillian-murphy-attends-the-free-fire-closing-night-gala-news-photo-615030208-1551909348.jpg</string>
 
+    <string name="fetch_login">http://52.91.24.198:8080/fridgely/users/login</string>
+    <string name="fetch_register">http://52.91.24.198:8080/fridgely/users</string>
+    <string name="fetch_shoplist">http://52.91.24.198:8080/fridgely/shoppingList</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
