--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,15 @@
     <string name="fetch_register">http://52.91.24.198:8080/fridgely/users</string>
     <string name="fetch_shoplist">http://52.91.24.198:8080/fridgely/shoppingList</string>
     <string name="submit_ratings">http://52.91.24.198:8080/fridgely/ratings/user/</string>
+    
+    <string name="breakfast_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/breakfast_bg.jpg</string>
+    <string name="chinese_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/chinese_bg.png</string>
+    <string name="indian_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/indian_bg.jpg</string>
+    <string name="italian_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/italian_bg.jpg</string>
+    <string name="korean_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/korean_bg.jpg</string>
+    <string name="more_img">https://raw.githubusercontent.com/SEM-Fridgely/Fridgely-Android/master/app/src/main/res/drawable-hdpi/more_bg.jpg</string>
+    
+    
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
